--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "@react-oauth/google": "^0.12.1",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
